--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-cre8eve.ai---creative-intelligence-platform",
+  "name": "cre8eve.ai---creative-intelligence-platform",
   "private": true,
   "version": "0.0.0",
   "type": "module",
